# greentic-oauth

./: .editorconfig  .env.example  .gitignore  Cargo.toml  MIGRATION_STATUS.md  Makefile  PROVIDERS.md  README.md  package-lock.json
.codex/: repo_overview.md
.github/workflows/: auto-tag.yml  ci.yml  conformance-live.yml  dependabot-automerge.yml  publish.yml  rust-ci.yml
apps/oauth-testharness/: Cargo.toml
apps/oauth-testharness/src/: main.rs
ci/: README.md  check_local.sh  local_check.sh
configs/providers/: github.yaml  google.yaml  microsoft-graph.provider.json  microsoft-graph.yaml  oidc-generic.provider.json  oidc-generic.yaml  slack.yaml
configs/providers/schema/: provider.manifest.schema.json
configs/tenants/acme/oauth/: microsoft-graph.yaml  slack.yaml
configs/tenants/acme/teams/ops/oauth/: microsoft-graph.yaml
configs/tenants/acme/users/alice@example.com/oauth/: microsoft-graph.yaml
crates/greentic-oauth-broker/: Cargo.toml
crates/greentic-oauth-broker/src/: audit.rs  config.rs  events.rs  ids.rs  lib.rs  main.rs  nats.rs  oauth.rs  path_safety.rs  provider_tokens.rs  rate_limit.rs  refresh.rs  telemetry.rs  telemetry_nats.rs  tokens.rs
crates/greentic-oauth-broker/src/admin/: consent.rs  mod.rs  models.rs  registry.rs  router.rs  secrets.rs  tests.rs  traits.rs
crates/greentic-oauth-broker/src/admin/messaging/: mod.rs  teams.rs
crates/greentic-oauth-broker/src/admin/providers/: auth0.rs  github.rs  google.rs  keycloak.rs  microsoft.rs  mod.rs  okta.rs  slack.rs
crates/greentic-oauth-broker/src/auth/: mod.rs  session.rs  state.rs  telemetry.rs
crates/greentic-oauth-broker/src/discovery/: mod.rs  provider.rs
crates/greentic-oauth-broker/src/http/: error.rs  mod.rs  state.rs  util.rs
crates/greentic-oauth-broker/src/http/handlers/: callback.rs  discovery.rs  ingress.rs  initiate.rs  mod.rs  oauth_api.rs  status.rs  test.rs  token.rs  well_known.rs
crates/greentic-oauth-broker/src/mcp/schemas/: oauth.describe.json  oauth.start.json
crates/greentic-oauth-broker/src/providers/: generic_oidc.rs  manifest.rs  microsoft.rs  mod.rs  oidc_generic.rs  presets.rs
crates/greentic-oauth-broker/src/security/: csrf.rs  discovery.rs  jwe.rs  jws.rs  mod.rs  pkce.rs
crates/greentic-oauth-broker/src/storage/: aws_kms.rs  env.rs  gcp_kms.rs  index.rs  models.rs  secrets_manager.rs
crates/greentic-oauth-broker/tests/: admin_api.rs  discovery_merges_manifests.rs  discovery_schemas.rs  http_flow.rs  mcp_tools.rs  nats_flow.rs  provider_manifest_validation.rs  provider_tokens_store.rs  storage_integration.rs  token_api.rs
crates/greentic-oauth-broker/tests/snapshots/: http_flow__oauth_start_response.snap
crates/greentic-oauth-client/: Cargo.toml
crates/greentic-oauth-client/src/: client.rs  error.rs  lib.rs  providers.rs
crates/greentic-oauth-core/: CHANGELOG.md  Cargo.toml
crates/greentic-oauth-core/src/: config.rs  constants.rs  lib.rs  oidc.rs  pkce.rs  provider.rs  provider_tokens.rs  schemas.rs  state.rs  types.rs  verifier.rs
crates/greentic-oauth-core/tests/: provider_api.rs  provider_tokens.rs
crates/greentic-oauth-host/: CHANGELOG.md  Cargo.toml  README.md
crates/greentic-oauth-host/src/: lib.rs
crates/greentic-oauth-host/wit/: greentic.oauth-broker@1.0.0.wit
crates/greentic-oauth-sdk/: CHANGELOG.md  Cargo.toml
crates/greentic-oauth-sdk/examples/: connect_msgraph.rs  signed_fetch_msgraph.rs
crates/greentic-oauth-sdk/src/: client.rs  client_wasm.rs  error.rs  lib.rs  oauth_broker_wit.rs  types.rs  validator.rs  wit.rs
crates/greentic-oauth-sdk/wit/: sdk.wit
crates/oauth-broker/: Cargo.toml
crates/oauth-broker/src/: audit.rs  config.rs  lib.rs  main.rs  nats.rs  telemetry.rs  telemetry_nats.rs  tokens.rs
crates/oauth-broker/src/discovery/: mod.rs  overlay.rs  provider.rs
crates/oauth-broker/src/http/: error.rs  mod.rs  state.rs  util.rs
crates/oauth-broker/src/http/handlers/: callback.rs  discovery.rs  initiate.rs  mod.rs  status.rs  token.rs  well_known.rs
crates/oauth-broker/src/mcp/: mod.rs
crates/oauth-broker/src/providers/: generic_oidc.rs  microsoft.rs  microsoft_graph.rs  mod.rs
crates/oauth-broker/src/security/: csrf.rs  discovery.rs  jwe.rs  jws.rs  mod.rs  pkce.rs
crates/oauth-broker/src/storage/: aws_kms.rs  env.rs  gcp_kms.rs  index.rs  mod.rs  models.rs  secrets_manager.rs
crates/oauth-broker/tests/: discovery_merges_manifests.rs  discovery_schemas.rs  http_flow.rs  mcp_tools.rs  nats_flow.rs  provider_manifest_validation.rs  storage_integration.rs  token_api.rs
crates/oauth-core/: Cargo.toml
crates/oauth-core/src/: provider.rs
crates/oauth-sdk/: Cargo.toml
crates/oauth-sdk/examples/: connect_msgraph.rs  signed_fetch_msgraph.rs
crates/oauth-sdk/src/: client.rs  error.rs  wit.rs
crates/oauth-wit/: greentic.oauth-broker@1.0.0.wit  greentic.oauth@0.1.0.wit
docs/: bindings-migration.md  discovery.md  provider_tokens.md
examples/: conformance_live.rs
examples/axum-app/: .env.example  Cargo.toml
examples/axum-app/secrets/: github.json  google.json  microsoft.json
examples/axum-app/src/: main.rs
examples/desired_app/: auth0_global.json  auth0_tenant_guided.json  github_tenant_guided.json  google_guided.json  keycloak_global.json  keycloak_tenant_guided.json  ms_basic.json  okta_global.json  okta_tenant_guided.json  slack_tenant_guided.json  teams_global.json  teams_tenant.json
oauth-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
oauth-worker/src/: broker-path.ts  broker.ts  index.ts
oauth-worker/tests/: broker.test.ts  worker.test.ts
static/examples/: microsoft-graph.blueprint.json  microsoft-graph.requirements.json  slack.requirements.json
static/schemas/: config-requirements.schema.json  flow-blueprint.schema.json  provider-descriptor.schema.json
