[workspace]
members = [
    "crates/greentic-oauth-core",
    "crates/greentic-oauth-broker",
    "crates/greentic-oauth-sdk",
    "examples/axum-app",
    "apps/oauth-testharness",
    "crates/greentic-oauth-client",
]
default-members = ["crates/greentic-oauth-broker"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
greentic-oauth-core = { path = "crates/greentic-oauth-core", version = "0.3" }
greentic-oauth-broker = { path = "crates/greentic-oauth-broker", version = "0.3" }
greentic-oauth-sdk = { path = "crates/greentic-oauth-sdk", version = "0.3" }
greentic-telemetry = { version = "0.3" }
greentic-types = { version = "0.3", features = ["telemetry-autoinit"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.32"
ulid = "1"
aes-gcm = "0.10"
anyhow = "1"
async-nats = "0.45"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "http1", "tokio"] }
base64 = "0.22"
base64ct = "1"
ed25519-dalek = { version = "2", features = ["std"] }
futures-util = "0.3"
hmac = "0.12"
http-body-util = "0.1"
hyper = "1"
jsonschema = "0.33"
once_cell = "1"
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
schemars = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.4"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ureq = { version = "3", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "38", features = ["component-model"] }
webpki-roots = "1"
