[package]
name = "oauth-testharness"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
greentic-oauth-core = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { version = "0.3", features = ["serde"] }
url = { workspace = true }
uuid = { workspace = true }
