[package]
name = "greentic-oauth-broker"
version.workspace = true
edition = "2024"
description = "Multi-tenant OAuth broker exposing HTTP, NATS, and discovery APIs for Greentic integrations."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-oauth"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-oauth-broker"

[features]
default = ["admin-ms"]
network-tests = []
aws_kms = []
gcp_kms = []
refresh-worker = []
admin-ms = []
admin-okta = []
admin-auth0 = []
admin-keycloak = []
admin-google = []
admin-github = []
admin-slack = []
admin-all = [
    "admin-ms",
    "admin-okta",
    "admin-auth0",
    "admin-keycloak",
    "admin-google",
    "admin-github",
    "admin-slack",
]

[dependencies]
greentic-oauth-core = { workspace = true }
aes-gcm = { workspace = true }
base64 = "0.22"
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
jsonschema = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
greentic-telemetry.workspace = true
greentic-types = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
p256 = { workspace = true }
ulid = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
jsonschema = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
insta = { workspace = true }
wiremock = { workspace = true }

[[bin]]
name = "greentic-oauth-admin"
path = "src/bin/admin.rs"
