[package]
name = "greentic-oauth-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
