[package]
name = "greentic-oauth-core"
version = "0.3.1"
edition = "2024"
description = "Shared OAuth types, token helpers, and provider primitives used by the Greentic broker and SDKs."
license = "MIT"

[features]
default = []
schemas = ["schemars", "serde_json"]
dpop = []
par = []
jar = []
mtls = []

[dependencies]
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = { workspace = true }
