[package]
name = "greentic-oauth-host"
version.workspace = true
edition = "2024"
description = "Host bindings and linker helpers for exposing the greentic OAuth broker world to Wasmtime."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-oauth"
homepage = "https://greentic.ai"
documentation = "https://github.com/greentic-ai/greentic-oauth/blob/main/README.md"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
greentic-oauth-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
