[package]
name = "greentic-oauth-sdk"
version.workspace = true
edition = "2024"
description = "Client SDK and WIT host bindings for interacting with the Greentic OAuth broker."
license = "MIT"

[features]
default = []
wasm-host = ["dep:wasmtime", "dep:anyhow"]

[dependencies]
greentic-oauth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
wasmtime = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"] }

[dev-dependencies]
uuid = { workspace = true }
greentic-types = { workspace = true }
anyhow = { workspace = true }
