[package]
name = "greentic-oauth-sdk"
version.workspace = true
edition = "2024"
description = "Client SDK and WIT host bindings for interacting with the Greentic OAuth broker."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-oauth"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-oauth-sdk"

[features]
default = []

[dependencies]
greentic-oauth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = "0.22"
http = { workspace = true }
wasmtime = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true }
greentic-types = { workspace = true, default-features = false, features = ["std", "serde", "time", "schemars", "telemetry-autoinit"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
greentic-oauth-host = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Avoid pulling in tokio/reqwest on wasm targets; the wasm client is a stub.

[dev-dependencies]
uuid = { workspace = true }
anyhow = { workspace = true }
