[package]
name = "oauth-broker"
version = "0.1.0"
edition = "2021"

[features]
default = []
aws_kms = []
gcp_kms = []
wiremock_tests = []

[dependencies]
oauth-core = { path = "../oauth-core" }
aes-gcm = "0.10"
base64 = "0.21"
ed25519-dalek = { version = "2", features = ["std"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
ureq = { version = "2.9", features = ["json"] }
url = "2"
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
