[package]
name = "oauth-broker"
version = "0.1.0"
edition = "2021"

[features]
default = []
aws_kms = []
gcp_kms = []
wiremock_tests = []

[dependencies]
oauth-core = { path = "../oauth-core" }
aes-gcm = "0.10"
base64 = "0.21"
ed25519-dalek = { version = "2", features = ["std"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
ureq = { version = "2.9", features = ["json"] }
url = "2"
axum = { version = "0.7", features = ["macros", "http1", "tokio"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
greentic-telemetry = { version = "0.1", features = ["otlp-grpc", "wasm-host"] }
anyhow = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
p256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
jsonschema = "0.17"
hyper = "1"
http-body-util = "0.1"
