[package]
name = "greentic-axum-example"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
greentic-oauth-sdk = { workspace = true }
uuid = { workspace = true }
greentic-oauth-core = { workspace = true }
greentic-types = { workspace = true, default-features = false, features = ["std", "serde", "time", "schemars"] }
